# impact-audited

./: .gitignore  LICENSE  LINKEDIN_DRAFT.md  README.md  impact_audited.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: RESULTS.md  reproduce.sh  results_requests.json  results_yfinance.json  scan_contamination.py
tests/: __init__.py  test_cli.py
